--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -17,13 +17,16 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .BlackFade::after {
@@ -54,12 +57,16 @@
   width: 380px;
   height: 560px;
   background-size: cover;
+  background-position: center;
   position: relative;
   z-index: 2;
-  margin-right: 10%;
   -ms-flex-negative: 0;
       flex-shrink: 0;
   margin-left: 50px;
+  margin-right: 10%;
+}
+
+.HeroPageImgA {
   margin-right: 10%;
 }
 
@@ -70,6 +77,7 @@
   line-height: 54px;
   letter-spacing: 0.08em;
   margin: 0;
+  margin-top: 20px;
 }
 
 .year {
@@ -302,6 +310,26 @@
           justify-content: space-evenly;
 }
 
+.NextButton {
+  z-index: 2;
+  background-image: url(./../../img/Next.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 30px;
+  height: 30px;
+}
+
+.contantcontainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
 @media only screen and (max-width: 1000px) {
   .BlackFade {
     -webkit-box-orient: vertical;
@@ -310,12 +338,23 @@
             flex-direction: column;
     text-align: center;
   }
+  .contantcontainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .title {
+    margin-top: 20px;
+  }
   .MoreInfoContainer div {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
   }
   .HeroPageImg {
+    margin: 0;
     margin-bottom: 20px;
   }
   .InfoContainer {
@@ -337,6 +376,12 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+  .HeroPageContentContainer {
+    margin-right: 10%;
+  }
+  .HeroPageImgA {
+    margin: 0;
   }
 }
 /*# sourceMappingURL=HeroSection.css.map */
