--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -14,8 +14,9 @@
   height: 100%;
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
 
   &::after {
     content: "";
@@ -39,11 +40,15 @@
   width: 380px;
   height: 560px;
   background-size: cover;
+  background-position: center;
   position: relative;
   z-index: 2;
-  margin-right: 10%;
+
   flex-shrink: 0;
   margin-left: 50px;
+  margin-right: 10%;
+}
+.HeroPageImgA {
   margin-right: 10%;
 }
 .title {
@@ -53,6 +58,7 @@
   line-height: 54px;
   letter-spacing: 0.08em;
   margin: 0;
+  margin-top: 20px;
 }
 .year {
   font-style: normal;
@@ -226,18 +232,38 @@
     justify-content: space-evenly;
   }
 }
+.NextButton {
+  z-index: 2;
+  background-image: url(./../../img/Next.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 30px;
+  height: 30px;
+}
+.contantcontainer {
+  display: flex;
+  flex-direction: row;
+}
 @media only screen and (max-width: 1000px) {
   .BlackFade {
     flex-direction: column;
     text-align: center;
   }
-
+  .contantcontainer {
+    flex-direction: column;
+    text-align: center;
+  }
+  .title {
+    margin-top: 20px;
+  }
   .MoreInfoContainer {
     div {
       justify-content: center;
     }
   }
   .HeroPageImg {
+    margin: 0;
     margin-bottom: 20px;
   }
   .InfoContainer {
@@ -251,5 +277,11 @@
   }
   .SVGcontainer {
     justify-content: center;
+  }
+  .HeroPageContentContainer {
+    margin-right: 10%;
+  }
+  .HeroPageImgA {
+    margin: 0;
   }
 }
