--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@ body {
   overflow-x: hidden;
   background: #050505;
 }
+html {
+  background: #050505;
+}
 a {
   text-decoration: none;
   color: white;
